[package]
name = "redrum"
version = "0.1.0"
edition = "2021"
authors = ["Kalanamith kalanamith@gmail.com"]
description = "A tool for analyzing SHA-256 hashes of words with various analysis methods"
license = "MIT"

[lib]
name = "redrum"
path = "src/lib.rs"

[[bin]]
name = "redrum"
path = "src/main.rs"

[dependencies]
sha2 = "0.10.8"
clap = { version = "4.5.1", features = ["derive"] }

[profile.test]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
